--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@/assets": ["src/assets/*"],
-      "@/components": ["src/components/*"]
+      "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"]
     }
   },
   "include": ["src"],
